📝 🐛 Fix users/tests endpoint couldn't get a data
