# potato/api_users_service.go
@@ -229,3 +229,100 @@ func (s *UsersApiService) GetUsersSkins(ctx context.Context, userId string, loca
 	}
 	return Response(200, resp), nil
 }
+
+// GetUsersBackground - Get users background
+func (s *UsersApiService) GetUsersBackground(ctx context.Context, userId string, backgroundName string) (ImplResponse, error) {
+	bg, err := s.cache.backgrounds.Get(backgroundName)
+	if err != nil {
+		return Response(http.StatusNotFound, nil), nil
+	}
+	parsedBg := bg.(Background)
+	resp := GetBackgroundResponse{
+		Item:        parsedBg,
+		Description: parsedBg.Description,
+		Recommended: []Background{},
+	}
+	return Response(200, resp), nil
+}
+
+// GetUsersEffect - Get users effect
+func (s *UsersApiService) GetUsersEffect(ctx context.Context, userId string, effectName string) (ImplResponse, error) {
+	ef, err := s.cache.effects.Get(effectName)
+	if err != nil {
+		return Response(http.StatusNotFound, nil), nil
+	}
+	parsedEf := ef.(Effect)
+	resp := GetEffectResponse{
+		Item:        parsedEf,
+		Description: parsedEf.Description,
+		Recommended: []Effect{},
+	}
+	return Response(200, resp), nil
+}
+
+// GetUsersEngine - Get users engine
+func (s *UsersApiService) GetUsersEngine(ctx context.Context, userId string, engineName string) (ImplResponse, error) {
+	eg, err := s.cache.engines.Get(engineName)
+	if err != nil {
+		return Response(http.StatusNotFound, nil), nil
+	}
+	parsedEg := eg.(Engine)
+	resp := GetEngineResponse{
+		Item:        parsedEg,
+		Description: parsedEg.Description,
+		Recommended: []Engine{},
+	}
+	return Response(200, resp), nil
+}
+
+// GetUsersLevel - Get users level
+func (s *UsersApiService) GetUsersLevel(ctx context.Context, userId string, levelName string) (ImplResponse, error) {
+	rawNs, newsNotExistErr := s.cache.news.Get(levelName)
+	rawLv, levelNotExistErr := s.cache.levels.Get(levelName)
+	if newsNotExistErr != nil && levelNotExistErr != nil {
+		return Response(http.StatusNotFound, nil), nil
+	}
+	var lv Level
+	if newsNotExistErr == nil {
+		ns := rawNs.(News)
+		lv = ns.Level
+	} else {
+		lv = rawLv.(Level)
+	}
+	resp := GetLevelResponse{
+		Item:        lv,
+		Description: lv.Description,
+		Recommended: []Level{},
+	}
+	return Response(200, resp), nil
+}
+
+// GetUsersParticle - Get users particle
+func (s *UsersApiService) GetUsersParticle(ctx context.Context, userId string, particleName string) (ImplResponse, error) {
+	rawPt, err := s.cache.particles.Get(particleName)
+	if err != nil {
+		return Response(http.StatusNotFound, nil), nil
+	}
+	pt := rawPt.(Particle)
+	resp := GetParticleResponse{
+		Item:        pt,
+		Description: pt.Description,
+		Recommended: []Particle{},
+	}
+	return Response(200, resp), nil
+}
+
+// GetUsersSkin - Get users skin
+func (s *UsersApiService) GetUsersSkin(ctx context.Context, userId string, skinName string) (ImplResponse, error) {
+	rawSk, err := s.cache.skins.Get(skinName)
+	if err != nil {
+		return Response(http.StatusNotFound, nil), nil
+	}
+	sk := rawSk.(Skin)
+	resp := GetSkinResponse{
+		Item:        sk,
+		Description: sk.Description,
+		Recommended: []Skin{},
+	}
+	return Response(200, resp), nil
+}
